# internal/swagger/swagger.yaml
@@ -74,8 +74,6 @@ definitions:
     properties:
       name:
         type: string
-      package_manager:
-        type: string
       path:
         type: string
       pixi_toml:
@@ -593,9 +591,6 @@ definitions:
       owner:
         $ref: '#/definitions/models.User'
       owner_id:
-        type: string
-      package_manager:
-        description: '"pixi" or "uv"'
         type: string
       path:
         description: filesystem path (local-mode)
